# glpikit

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docker/: compose.glpi.yml
docs/: agents-llm-integration.md  async-usage.md  cli.md  contract-tests.md  examples-fastapi.md  integration-testing.md  migration-guide.md  oauth2-pkce.md  quickstart-graphql.md  quickstart-v1.md  quickstart-v2.md  roadmap-2-weeks.md  troubleshooting-auth.md
scripts/: run_integration_matrix.sh
src/glpikit/: __init__.py  async_client.py  cli.py  client.py
src/glpikit/ai/: __init__.py  integrations.py  memory.py  policy.py  prompting.py  safe.py  schemas.py  tools.py
src/glpikit/auth/: __init__.py  base.py  oauth2_helpers.py  strategies.py  v1_session.py  v2_oauth.py
src/glpikit/errors/: __init__.py  base.py
src/glpikit/graphql/: __init__.py  builder.py  client.py  schema.py
src/glpikit/legacy/: __init__.py  config.py  documents.py  entities.py  items.py  massive_actions.py  profiles.py  raw.py  search.py  session.py  users.py
src/glpikit/models/: __init__.py  bulk.py  common.py  document.py  graphql.py  search.py  ticket.py  user.py
src/glpikit/resources/: __init__.py  _generic.py  appliances.py  assets.py  (+28 more)
tests/: test_async_client.py  test_cli_and_integrations.py  test_items_advanced.py  test_massive_actions_v2.py  test_mvp_completion.py  test_policy_oauth_and_v2_typed.py  test_sync_client.py  test_v2_contract.py  test_v2_generated_and_adapters.py
tests/fixtures/: openapi_contract.json
tests/integration/: README.md  test_live_glpi.py
(+22 files in other folders)
