[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "glpikit"
version = "0.1.0"
description = "Python SDK for GLPI APIs (v1, v2 and GraphQL)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "glpikit contributors" }
]
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.6.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.6.0"
]
observability = [
  "opentelemetry-api>=1.27.0"
]
agents = [
  "langchain-core>=0.3.0"
]

[project.scripts]
glpikit = "glpikit.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/glpikit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
markers = [
  "integration: tests that require a live GLPI instance"
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]
